# DhanVichar

./: DhanVichar.pptx  README.md  Recommendation_factors.md  Stock_Analysis.pptx  concalls_pdf.py  process_mf.py  process_stock.py  requirements.txt  stock-analysis-ai-agent.md  ~$DhanVichar.pptx
agents/: data_agent.py  news_agent.py  orchestrator.py  predictor_agent.py  summarizer_agent.py
video_processing/: README.md  setup.py
video_processing/myenv/: pyvenv.cfg
video_processing/myenv/Scripts/: activate  activate.bat  numba
video_processing/output_transcripts/english/: Agentic.txt
video_processing/output_transcripts/without_audio/: wt_audio.txt
video_processing/test/: test_transcription.py
video_processing/validation/audio_quality/: audio_quality.py  audio_quality_report.txt  audio_quality_results.json
video_processing/validation/profiling/: profile_results.json  profile_summary.txt  profiler.py
video_processing/validation/wer_analysis/: wer_analysis.py  wer_report.txt  wer_results.json
video_processing/video_transcription_pipeline/: config.yaml  pyproject.toml  requirements.txt
video_processing/video_transcription_pipeline/video_transcription_pipeline/: __init__.py  config_loader.py  exceptions.py  extractors.py  file_manager.py  pipeline.py  transcriber.py  validator.py
video_processing/video_transcription_pipeline/video_transcription_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
