[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-transcription-pipeline"
version = "1.0.0"
description = "Production-ready Python package for video transcription with Whisper"
authors = [{name = "Video Transcription Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai-whisper>=20231117",
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "librosa>=0.8.1",
    "soundfile>=0.10.3",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/your-org/video-transcription-pipeline"
Repository = "https://github.com/your-org/video-transcription-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_transcription_pipeline*"]